--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -54,7 +54,8 @@ body {
   transition: all 0.3s ease;
 }
 
-.animated-border:hover {
+.animated-border:hover,
+.animated-border-nonhover {
   box-shadow: 0 0 30px rgba(58, 41, 255, 0.6), 0 0 60px rgba(255, 148, 180, 0.4),
     0 0 90px rgba(255, 50, 50, 0.3);
 }
